spruce up the menu styling a bit add an active class for the current page get rid of the padding jump on hover etc, because it feels a bit wonky make sure the highlight shows only on current item (and not also on children/sub pages) create include for sub menu because the loops are insane haha

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -173,22 +173,25 @@ Navigation
 .sidebar-nav a {
   display: block;
   padding: 10px;
+  border-left: 4px solid transparent;
+  font-size: 1.125em;
 }
 .sidebar-nav a,
 .sidebar-nav a:link,
 .sidebar-nav a:visited {
-  border-bottom: none;
   color: #75787b;
+  border-bottom: none;
 }
-.sidebar-nav li:hover,
-.sidebar-nav a:focus,
-.sidebar-nav li:active,
-.sidebar-nav .sidebar-nav-active {
+
+.sidebar-nav > ul > li a:hover,
+.sidebar-nav > ul > li a:focus,
+.sidebar-nav > ul > li a:active,
+.sidebar-nav > ul > .sidebar-nav-active a {
   color: #75787b;
   border-left: 4px solid $brandColor;
   background-color: transparent;
-  border-bottom: 1px solid #babbbd;
 }
+
 .sidebar-nav li:hover,
 .sidebar-nav li:active,
 .sidebar-nav .sidebar-nav-active {
@@ -200,24 +203,22 @@ Navigation
 .sidebar-nav li:hover a:focus,
 .sidebar-nav li:active a:focus {
   border-left: none;
-  padding-left: 10px;
 }
 .sidebar-nav ul {
   margin: 0;
   padding: 0;
   /*border-top: 1px solid @gray-50;*/
 }
-.sidebar-nav li {
+.sidebar-nav li,
+.sidebar-nav li ul li {
   list-style: none;
   border-bottom: 1px solid #babbbd;
-  font-size: 1.125em;
-  padding-left: 4px;
 }
 .sidebar-nav li:last-child {
   border-bottom: none;
 }
 
-.sub-link {
+.sub-link a {
   padding-left: 30px !important;
   font-size: 1em !important;
 }
